package pers.prover07.dp.structural.proxy.jdkproxy;

/**
 * 抽象主题
 */
public interface SellTickets {

    /**
     * 卖票
     */
    void sell();

}
